--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,32 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "icon-192x192-light.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable",
+      "media": "(prefers-color-scheme: light)"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "icon-512x512-light.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable",
+      "media": "(prefers-color-scheme: light)"
+    },
+    {
+      "src": "icon-192x192-dark.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable",
+      "media": "(prefers-color-scheme: dark)"
+    },
+    {
+      "src": "icon-512x512-dark.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable",
+      "media": "(prefers-color-scheme: dark)"
     }
   ]
 }
