--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "macro-tracker-pwa",
   "private": true,
-  "version": "1.8.3",
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@types/lodash": "^4.17.10",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
